# bevy_array_shader_demo

./: Cargo.toml  readme.md
assets/shaders/: array_texture-2.wgsl  array_texture.wgsl
src/: main.rs
